cabal-version:      2.4
name:               hls-optics-test
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Andrzej Rybczak
maintainer:         andrzej@rybczak.net

-- A copyright notice.
-- copyright:
-- category:
-- extra-source-files: CHANGELOG.md

executable hls-optics-test
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base < 5
                    , optics-core >= 0.4

    hs-source-dirs:   src

    default-language: Haskell2010
